--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,4 +6,16 @@ jobs:
   UnitsTests:
     runs-on: ubuntu-22.04
     steps:
-      - run: echo Hello World
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run unit tests
+        run: npm run test
