--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -40,6 +40,12 @@ jobs:
   Build:
     runs-on: ubuntu-22.04
     needs: [UnitsTests, E2ETests]
+    permissions:
+      contents: write
+      id-token: write
+    environment:
+      name: staging
+      url: ${{ env.PUBLIC_URL }}/
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -52,5 +58,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Initialize deployment URL
+        run: echo "PUBLIC URL=${{ vars.PUBLIC_URL }}/${{ github.head_ref }}" >> $GITHUB_ENV
+
       - name: Run build
         run: npm run build
+
+      - uses: JamesIves/github-pages-deploy-action@4.4.1
+        id: deployment
+        with:
+          folder: ./build
+          target-folder: ${{ github.head_ref }}
+          clean: false
