--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -44,7 +44,7 @@ jobs:
       contents: write
       id-token: write
     environment:
-      name: staging
+      name: github-pages
       url: ${{ env.PUBLIC_URL }}/
     steps:
       - name: Checkout repository
@@ -59,7 +59,6 @@ jobs:
         run: npm install
 
       - name: Initialize deployment URL
-        id: deployment_url
         run: echo "PUBLIC URL=${{ vars.PUBLIC_URL }}/${{ github.head_ref }}" >> $GITHUB_ENV
 
       - name: Run build
