--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -44,13 +44,13 @@ jobs:
       contents: write
       id-token: write
     environment:
-      name: github-pages
+      name: "github-pages"
       url: ${{ env.PUBLIC_URL }}/
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup node
+      - name: Initialize node
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -58,16 +58,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Initialize deployment URL
+      - name: Initialize our deploy URL
         id: deployment_url
-        run: echo "PUBLIC URL=${{ vars.PUBLIC_URL }}/${{ github.head_ref }}" >> $GITHUB_ENV
+        run: echo "PUBLIC_URL=${{vars.PUBLIC_URL}}/${{github.head_ref}}" >> $GITHUB_ENV
 
-      - name: Run build
+      - name: Build our project
         run: npm run build
 
       - uses: JamesIves/github-pages-deploy-action@v4.4.1
         id: deployment
         with:
           folder: ./build
-          target-folder: ${{ github.head_ref }}
+          target-folder: ${{github.head_ref}}
           clean: false
